--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=development nodemon ./index.js localhost 4000"
+    "start": "node ./index.js",
+    "dev": "NODE_ENV=development nodemon ./index.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,7 +19,7 @@
     "jwt-simple": "^0.5.1",
     "moment": "^2.22.2",
     "multer": "^1.3.1",
-    "node": "^10.5.0",
+    "node": "^8.12.0",
     "nodemon": "^1.17.5",
     "pg": "^7.4.3",
     "sanitize-filename": "^1.6.1"
