--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
-version: '2'
+version: '2.3'
 services:
   api:
     container_name: dev-server
     build: ./api
     volumes:
-      - ./api/:/usr/app
+      - uploads_volume:/usr/app/uploads/
     ports:
       - "8080:8080"
     depends_on:
@@ -27,3 +27,6 @@ services:
       POSTGRES_USER: flannerykj
       POSTGRES_PASSWORD: cheesecake
       POSTGRES_DB: ua_development
+
+volumes:
+  uploads_volume:
