ad Roles, routers, acces control etc

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     container_name: ua-server
     build: ./api
     volumes:
-      - ./api/uploads/:/usr/app/uploads/
+      - ./api/uploads:/usr/app/uploads:delegated
     ports:
       - "8080:8080"
     depends_on:
