--- a/api/package.json
+++ b/api/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./index.js",
-    "dev": "nodemon ./index.js"
+    "start": "node ./src/index.js",
+    "dev": "nodemon ./src/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "accesscontrol": "^2.2.1",
     "bcrypt-nodejs": "0.0.3",
     "compression": "^1.7.2",
     "express": "^4.16.3",
@@ -22,6 +23,7 @@
     "node": "^8.12.0",
     "nodemon": "^1.17.5",
     "pg": "^7.4.3",
-    "sanitize-filename": "^1.6.1"
+    "sanitize-filename": "^1.6.1",
+    "winston": "^3.1.0"
   }
 }
